
syntax = "proto3";

package generic.events.v1;

option go_package = "github.com/jgkawell/galactus/api/gen/go/generic/events/v1";

enum SystemEventCode {
    SYSTEM_EVENT_CODE_INVALID_UNSPECIFIED = 0;
    SYSTEM_EVENT_CODE_ERROR = 1;
}

message SystemError {
    SystemErrorCode code = 1;
}

enum SystemErrorCode {
    SYSTEM_ERROR_CODE_INVALID_UNSPECIFIED = 0;
    SYSTEM_ERROR_CODE_FAILED_EVENT_PUBLISH = 1;
    SYSTEM_ERROR_CODE_FAILED_EVENT_SAVED = 2;
    SYSTEM_ERROR_CODE_FAILED_EVENT_FORWARD = 3;
    SYSTEM_ERROR_CODE_MALFORMED_EVENT_DATA = 4;
}
